[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_system_control"
version = "1.0.1"
description = "A package to model small energy systems and implement different types of control systems"
authors = [
  { name="Francesco Baldi", email="francesco.baldi86@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pandas", "matplotlib", "dataclasses", "pytest", "pyyaml", "requests", "xlsxwriter", "pvlib", "cvxpy", "scikit-learn"]

[project.urls]
"Homepage" = "https://github.com/francescobaldi86/EnergySystemControl"
"Bug Tracker" = "https://github.com/francescobaldi86/EnergySystemControl/issues"

[project.optional-dependencies]
dev = ["flake8", "pytest"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests that require external resources (e.g., network calls)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
energy_system_control = ["data/*.csv"]
